Update Dockerfile.router to use nightly Rust and add protobuf-compiler
- Switch base image from rust:1.75-bullseye to rustlang/rust:nightly-bullseye
- Add protobuf-compiler to system dependencies for build compatibility

--- a/Dockerfile.router
+++ b/Dockerfile.router
@@ -1,11 +1,12 @@
 # Dockerfile for vllm-router
-FROM rust:1.75-bullseye as rust-builder
+FROM rustlang/rust:nightly-bullseye as rust-builder
 
 # Install system dependencies
 RUN apt-get update && apt-get install -y \
     build-essential \
     pkg-config \
     libssl-dev \
+    protobuf-compiler \
     && rm -rf /var/lib/apt/lists/*
 
 # Set working directory
